# fridge-injector

./: .gitmodules  CMakeLists.txt  resource.rc  vcpkg.json
assets/: resource.rc
src/: config.cpp  config.hpp  console.cpp  console.hpp  exceptions.hpp  gui.cpp  gui.hpp  injection.cpp  injection.hpp  main.cpp  pipeserver.cpp  utils.cpp  utils.hpp
src/GUI/: console.cpp  console.hpp  gui.cpp  gui.hpp
src/injection/: injection.cpp  pipeserver.cpp  pipeserver.hpp
src/utils/: color.cpp  color.hpp  config.hpp  utils.hpp
